--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ button image {
 }
 
 .benefits__description {
-	margin-top: 5rem;
+	margin-top: 0;
 }
 
 .benefits__description h1 {
@@ -268,12 +268,12 @@ button image {
 }
 
 .benefits__cart img {
-	height: 5rem;
+	height: 4rem;
 	margin: 2.5rem;
 }
 
 .benefits__cart strong {
-	font-size: 2.25rem;
+	font-size: 2rem;
 }
 
 .benefits__cart h4 {
@@ -395,8 +395,8 @@ button image {
 		display: flex;
 		justify-content: center;
 	}
-	.benefits__description {
-		margin-top: 0;
+	.benefits__cart img {
+		height: 5rem;
 	}
 	.moving-cloud-1 {
 		z-index: 1;
