--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ button:hover {
 .header .logo {
 	font-family: 'Pacifico', cursive;
 	margin-left: 1rem;
+	margin-bottom: 1.5rem;
 	font-size: 2.5rem;
 }
 
